# KiaBlog

backend/: db.sqlite3  pyproject.toml
backend/apps/articles/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/articles/migrations/: 0001_initial.py  0002_article_category_article_tags.py  0003_article_author.py
backend/apps/categories_tags/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/categories_tags/migrations/: 0001_initial.py
backend/apps/comments/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/core/: models.py
backend/apps/users/: apps.py  models.py  serializers.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: README.txt
